crates/celo-reth/tests/ui/native_from_fc.stderr
error[E0277]: the trait bound `Native: From<Fc>` is not satisfied
 --> tests/ui/native_from_fc.rs:4:32
  |
4 |     let _: Native = Fc::new(1).into();
  |                                ^^^^ the trait `From<Fc>` is not implemented for `Native`
  |
  = note: required for `Fc` to implement `Into<Native>`
