crates/celo-reth/tests/ui/native_from_fc.rs
use celo_revm::units::{Fc, Native};

fn main() {
    let _: Native = Fc::new(1).into();
}
